--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "lodash": "^4.17.21",
+        "postcss": "^8.4.25",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0",
         "vue": "^3.3.4"
     },
