--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@iconify/vue": "^4.1.1",
         "@vitejs/plugin-vue": "^4.2.3",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
@@ -17,6 +18,7 @@
         "vue": "^3.3.4"
     },
     "dependencies": {
-        "@inertiajs/inertia-vue3": "^0.6.0"
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7"
     }
 }
